{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 20,
  "lineage": "ab3e4b80-576e-0078-9fed-7004517ed8cb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5e7e27578d32e47",
            "arn": "arn:aws:ec2:us-east-1:359247234768:instance/i-0da818c624e8428a7",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0da818c624e8428a7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "peakfit-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d473d3a5f705aae3",
            "private_dns": "ip-10-0-1-225.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.225",
            "public_dns": "ec2-100-53-255-237.compute-1.amazonaws.com",
            "public_ip": "100.53.255.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0d0730a3fa8771431",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04eaf82695e736a3d",
            "tags": {
              "Name": "peakfit-ec2-1"
            },
            "tags_all": {
              "Name": "peakfit-ec2-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e104a13c98b3715"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.peakfit",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d5e7e27578d32e47",
            "arn": "arn:aws:ec2:us-east-1:359247234768:instance/i-0d3aa2f7a20dddb06",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d3aa2f7a20dddb06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "peakfit-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a0457cf2ffce482b",
            "private_dns": "ip-10-0-2-19.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.19",
            "public_dns": "ec2-100-55-47-160.compute-1.amazonaws.com",
            "public_ip": "100.55.47.160",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0146c60ba6c7d4c40",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01bf1b1e32e57429c",
            "tags": {
              "Name": "peakfit-ec2-2"
            },
            "tags_all": {
              "Name": "peakfit-ec2-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09e104a13c98b3715"
            ]
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.peakfit",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:internet-gateway/igw-0341b14a365827f3b",
            "id": "igw-0341b14a365827f3b",
            "owner_id": "359247234768",
            "tags": {
              "Name": "peakfit-igw"
            },
            "tags_all": {
              "Name": "peakfit-igw"
            },
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "dependencies": [
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:loadbalancer/app/peakfit-alb/7a93244dcaf8542a",
            "arn_suffix": "app/peakfit-alb/7a93244dcaf8542a",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "peakfit-alb-1890087041.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:359247234768:loadbalancer/app/peakfit-alb/7a93244dcaf8542a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "peakfit-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07a6217dcdb0dd231"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01bf1b1e32e57429c"
              },
              {
                "subnet_id": "subnet-04eaf82695e736a3d"
              }
            ],
            "subnets": [
              "subnet-01bf1b1e32e57429c",
              "subnet-04eaf82695e736a3d"
            ],
            "tags": {
              "Name": "peakfit-alb"
            },
            "tags_all": {
              "Name": "peakfit-alb"
            },
            "vpc_id": "vpc-0af772adbc1684522",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:listener/app/peakfit-alb/7a93244dcaf8542a/fdb9d310ccbe9ef7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:359247234768:listener/app/peakfit-alb/7a93244dcaf8542a/fdb9d310ccbe9ef7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:loadbalancer/app/peakfit-alb/7a93244dcaf8542a",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.peakfit",
            "aws_lb_target_group.peakfit",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db",
            "arn_suffix": "targetgroup/peakfit-tg/6f67ddf0a2e4e5db",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200,304",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:359247234768:loadbalancer/app/peakfit-alb/7a93244dcaf8542a"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "peakfit-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "dependencies": [
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db-20260521094546387400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db",
            "target_id": "i-0da818c624e8428a7"
          },
          "dependencies": [
            "aws_instance.peakfit",
            "aws_lb_target_group.peakfit",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.peakfit",
            "data.aws_ami.amazon_linux"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db-20260521094546414300000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:359247234768:targetgroup/peakfit-tg/6f67ddf0a2e4e5db",
            "target_id": "i-0d3aa2f7a20dddb06"
          },
          "dependencies": [
            "aws_instance.peakfit",
            "aws_lb_target_group.peakfit",
            "aws_security_group.alb",
            "aws_security_group.ec2",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.peakfit",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:route-table/rtb-00e6c5ce6c32da9c3",
            "id": "rtb-00e6c5ce6c32da9c3",
            "owner_id": "359247234768",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0341b14a365827f3b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "peakfit-rt"
            },
            "tags_all": {
              "Name": "peakfit-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.peakfit",
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0ce09e2a92c953f",
            "route_table_id": "rtb-00e6c5ce6c32da9c3",
            "subnet_id": "subnet-04eaf82695e736a3d"
          },
          "dependencies": [
            "aws_internet_gateway.peakfit",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0154427335f94e1d0",
            "route_table_id": "rtb-00e6c5ce6c32da9c3",
            "subnet_id": "subnet-01bf1b1e32e57429c"
          },
          "dependencies": [
            "aws_internet_gateway.peakfit",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:security-group/sg-07a6217dcdb0dd231",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07a6217dcdb0dd231",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "peakfit-sg-alb",
            "name_prefix": "",
            "owner_id": "359247234768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "peakfit-sg-alb"
            },
            "tags_all": {
              "Name": "peakfit-sg-alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:security-group/sg-09e104a13c98b3715",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09e104a13c98b3715",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07a6217dcdb0dd231"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "peakfit-sg-ec2",
            "name_prefix": "",
            "owner_id": "359247234768",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "peakfit-sg-ec2"
            },
            "tags_all": {
              "Name": "peakfit-sg-ec2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:subnet/subnet-04eaf82695e736a3d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04eaf82695e736a3d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "359247234768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "peakfit-subnet-1"
            },
            "tags_all": {
              "Name": "peakfit-subnet-1"
            },
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "dependencies": [
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:subnet/subnet-01bf1b1e32e57429c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01bf1b1e32e57429c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "359247234768",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "peakfit-subnet-2"
            },
            "tags_all": {
              "Name": "peakfit-subnet-2"
            },
            "vpc_id": "vpc-0af772adbc1684522"
          },
          "dependencies": [
            "aws_vpc.peakfit"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "peakfit",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:359247234768:vpc/vpc-0af772adbc1684522",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f7eed4175ac31245",
            "default_route_table_id": "rtb-0bfb2c9e83dd3e00e",
            "default_security_group_id": "sg-0ac489a404e2ab43e",
            "dhcp_options_id": "dopt-0b8ec8b174a90dc14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0af772adbc1684522",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bfb2c9e83dd3e00e",
            "owner_id": "359247234768",
            "tags": {
              "Name": "peakfit-vpc"
            },
            "tags_all": {
              "Name": "peakfit-vpc"
            }
          }
        }
      ]
    }
  ]
}